Fix ubuntu overlay scrollbar bug

--- a/data/application.css
+++ b/data/application.css
@@ -38,6 +38,11 @@ Gtk.ListBoxRow .menubutton:hover {
 	border-color: alpha(@theme_fg_color, 0.1);
 }
 
+/*Ubuntu Fix*/
+.view_container {
+    background-color: @theme_bg_color;
+}
+
 .lollypop-title {
     font-weight: bold;
     padding: 0px 12px;
